[build-system]
requires = ["setuptools>=78.1.1,<83.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh_lightning"
version = "4.0.0"
description = "Public Preview — Agent-Lightning RL integration for the Agent Governance Toolkit: governed training with policy enforcement"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com"},
]
maintainers = [
    {name = "Agent Governance Toolkit Team", email = "agentgovtoolkit@microsoft.com"},
]
keywords = [
    "ai-agents", "governance", "reinforcement-learning",
    "agentmesh-lightning", "agent-os", "enterprise-ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
agent-os = ["agent-governance-toolkit-core>=4.0.0,<5.0"]
dev = ["pytest>=7.0,<10.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Repository = "https://github.com/microsoft/agent-governance-toolkit"
"Bug Tracker" = "https://github.com/microsoft/agent-governance-toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]
