[build-system]
requires = ["setuptools>=78.1.1,<83.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh_marketplace"
version = "4.0.0"
description = "Plugin marketplace for the Agent Governance Toolkit — discover, install, verify, and manage plugins"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com" }
]
keywords = [
    "ai-agents", "governance", "plugins", "marketplace",
    "agent-os", "agentmesh", "enterprise-ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "cryptography>=46.0.7,<49.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
cli = ["click>=8.0,<9.0", "rich>=13.0,<16.0"]
dev = ["pytest>=7.0,<10.0", "pytest-cov", "click>=8.0,<9.0", "rich>=13.0,<16.0", "httpx>=0.27.0,<1.0", "python-dateutil>=2.8"]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Repository = "https://github.com/microsoft/agent-governance-toolkit"
"Bug Tracker" = "https://github.com/microsoft/agent-governance-toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]
