[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent_sandbox"
version = "3.6.0"
description = "Public Preview — Agent Sandbox: Docker-based execution isolation for AI agents with policy-driven resource limits, tool proxies, network enforcement, and filesystem checkpointing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com"},
]
maintainers = [
    {name = "Agent Governance Toolkit Team", email = "agentgovtoolkit@microsoft.com"},
]
keywords = [
    "ai", "agents", "sandbox", "docker", "isolation",
    "governance", "safety", "containers", "gvisor", "kata",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
docker = [
    "docker>=7.1.0,<8.0",
]
hyperlight = [
    "hyperlight-sandbox>=0.4.0,<0.5",
]
policy = [
    "agent-os-kernel>=3.6.0,<4.0",
]
full = [
    "agent-sandbox[docker,hyperlight,policy]",
]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "pytest-cov>=7.1.0,<8.0",
    "ruff>=0.15.12,<1.0",
    "mypy>=2.1.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Repository = "https://github.com/microsoft/agent-governance-toolkit"
Documentation = "https://github.com/microsoft/agent-governance-toolkit#readme"
"Bug Tracker" = "https://github.com/microsoft/agent-governance-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sandbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
