[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agt_sandbox"
version = "4.1.0"
description = "Agent Sandbox: sandbox execution isolation for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com"},
]
maintainers = [
    {name = "Agent Governance Toolkit Team", email = "agentgovtoolkit@microsoft.com"},
]
keywords = [
    "ai", "agents", "sandbox", "docker", "isolation",
    "governance", "safety", "containers", "gvisor", "kata",
    "landlock", "seatbelt", "nono",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "agent-governance-toolkit-cli>=4.0.0,<5.0",
]

[project.optional-dependencies]
docker = [
    "docker>=7.1.0,<8.0",
]
hyperlight = [
    "hyperlight-sandbox>=0.4.0,<0.5",
]
azure = [
    # Early-access Python SDK for Azure Container Apps sandboxes.
    # Installed via the GitHub release wheel — see README.
    "azure-identity>=1.19.0,<2.0",
    "azure-core>=1.32.0,<2.0",
]
nono = [
    # OS-native (Landlock / Seatbelt) capability sandbox. Linux & macOS
    # only — no Windows wheels are published.
    #
    # nono-py is PyPI-classified Alpha (upstream always-further/nono).
    # Suitable for defense-in-depth and dev/CI; evaluate kernel-enforced
    # guarantees against your production bar before hard-boundary use.
    "nono-py>=0.10.1,<0.11",
]
policy = [
    "agent-governance-toolkit-core>=4.0.0,<5.0",
]
full = [
    "agt-sandbox[docker,hyperlight,policy]",
]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "pytest-cov>=7.1.0,<8.0",
    "ruff>=0.15.13,<1.0",
    "mypy>=2.1.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Repository = "https://github.com/microsoft/agent-governance-toolkit"
Documentation = "https://github.com/microsoft/agent-governance-toolkit#readme"
"Bug Tracker" = "https://github.com/microsoft/agent-governance-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sandbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
