[package]
name = "agent_control_specification_annotators"
version = "0.3.1-beta.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "Reference annotator dispatchers backed by Agent Control Specification"

[features]
default = []
aacs = ["agent_control_specification_core/aacs"]
openai_moderation = ["agent_control_specification_core/openai_moderation"]
perspective = ["agent_control_specification_core/perspective"]
llama_guard = ["agent_control_specification_core/llama_guard"]
lakera_guard = ["agent_control_specification_core/lakera_guard"]
auto = ["agent_control_specification_core/auto"]

[dependencies]
agent_control_specification = { version = "0.3.1-beta.0", path = "../../sdk/rust" }
agent_control_specification_core = { version = "0.3.1-beta.0", path = "../../core", features = ["default-dispatchers"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[[example]]
name = "live_aacs_classifier"
required-features = ["aacs"]

[[example]]
name = "live_enforce_loop"
required-features = ["aacs"]
