[package]
name = "agent_control_specification_mcp"
version = "0.3.1-beta.0"
edition = "2021"
rust-version = "1.85"
publish = false
description = "rmcp server tool-call guard backed by Agent Control Specification intervention points"

[lib]
doctest = false

[dependencies]
agent_control_specification = { version = "0.3.1-beta.0", path = "../../sdk/rust" }
rmcp = "1.7"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
