[build-system]
requires = ["maturin==1.8.7"]
build-backend = "maturin"

[project]
name = "agent-control-specification"
version = "0.3.1b0"
description = "Thin Python SDK surface for the stateless Agent Control Specification runtime"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Control Specification contributors" }]
keywords = ["agents", "policy", "runtime", "security"]
dependencies = [
  "pyyaml>=6.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

# Optional real-framework packages exercised by the gated integration
# tests in tests/test_real_packages.py (skipped when not installed).
[project.optional-dependencies]

litellm-proxy = [
  "litellm[proxy]>=1.40",
  "fastapi>=0.100",
]
realpkg-tests = [
  "langchain-core>=0.3",
  "langchain-openai>=0.3,<2.0",
  "openai>=1.40",
  "httpx>=0.27",
  "openai-agents>=0.1",
  # Anthropic 0.68 introduced the stable tool runner constructor shape used
  # by the worked reference. ACS wraps Messages here, but keeps the same floor
  # and caps before a future major reshuffle.
  "anthropic>=0.68,<2",
  # semantic-kernel 1.39.4 includes critical security fixes and preserves the
  # KernelFunction and KernelArguments APIs exercised by the ACS adapter.
  "semantic-kernel>=1.39.4",
  "autogen-agentchat>=0.4",
  "autogen-core>=0.4",
  "autogen-ext[openai]>=0.4",
  "crewai>=0.60",
  "mcp>=1.0",
  # Azure AI Foundry Agents SDK, exercised by examples/real_packages/foundry_agents.py
  # (real Foundry tool definitions + a live Azure OpenAI LLM-judge policy).
  "azure-ai-agents>=1.1,<2",
  # The proxy extra installs runtime dependencies that plain litellm omits.
  "litellm[proxy]>=1.40",
  "fastapi>=0.100",
  "python-dotenv>=1.0",
]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py311"]
module-name = "agent_control_specification._native"
python-source = "."
