[build-system]
requires = ["setuptools>=78.1.1,<83.0"]
build-backend = "setuptools.build_meta"

[project]
name = "defi_sentinel_demo"
version = "4.0.0"
description = "DeFi Risk Sentinel demo using Agent OS"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.4.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
