[build-system]
requires = ["setuptools>=78.1.1,<83.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grid_balancing_demo"
version = "4.0.0"
description = "Autonomous energy trading demo using Agent OS"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.4.0,<3.0",
    "numpy>=1.20.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
